Fix: 단체신청 드랍다운 풋터 뒤로가는 현상 z-index로 해결

--- a/najuha-fronted/src/components/competitionApplyTeamForm.css
+++ b/najuha-fronted/src/components/competitionApplyTeamForm.css
@@ -17,6 +17,7 @@
 .CompetitionApplyTeamForm-top-table-row li {
   font-size: 1.6rem;
   color: #8c8c8c;
+  z-index: 900;
 }
 
 .CompetitionApplyTeamForm-top-table-row li p {
